Fixes #77 - Java 8 compatibility. (#79)
* Fixes #77 - Java 8 compatibility.

Updated dependencies for ALPN.
Updated usage of Java 11 API back to Java 8 APIs.
Updated README.
Added both ALPN implementations to uber jar, so that it can be used with any Java version.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>